# oneMono

./: .gitignore  AGENTS.md  AGENTS.override.md  README.md  \  content.md  feature.yaml  feedback.md  funcion.yaml  gemini.md  package.json  plan.md  plopfile.js  pnpm-lock.yaml  pnpm-workspace.yaml  todo.md  turbo.json
.agents/: log.md  plan.md
.gemini/: structure.md
.husky/: pre-commit
.project/: memo.md
.ruler/: AGENTS.md  structure.md
.turbo/cache/: 01568186c1a2722f-meta.json  09933b83e62854cc-meta.json  0e1eec856e780702-meta.json  0e77c9e54fbba0ba-meta.json  0e77c9e54fbba0ba.tar.zst  13c190b5c9e30025.tar.zst  18e998b841405341-meta.json  1ed3732a911ae8f2.tar.zst  1fb1a6909053ad07-meta.json  24a5f915895d79ac-meta.json  271932e7e2264870-meta.json  28479ca780890a51-meta.json  312d79012b4e8415-meta.json  3813e9f091ebdf1e.tar.zst  3b9caecb8ed5155e-meta.json  3ef51f1f8a32a5df.tar.zst  439aebabbfcd15ad-meta.json  43ab0b37f87666a4-meta.json  4b75dc9b906a86d6-meta.json  (+31 more)
app/script/mcp-project-manager/: .gitignore  Cargo.toml
app/script/mcp-project-manager/plan/: code.yaml
app/script/mcp-project-manager/src/: config.rs  grist.rs  instructions.rs  lib.rs  main.rs  models.rs  plan.rs  server.rs
app/script/mcp-project-manager/src/handlers/: code.rs
app/script/mcp-project-manager/tests/: grist_test.rs
domains/: AGENTS.md
issue/: 2025-10-30.md
references/: plan.md  problem-analysis.md
template/desktop/astro/src-tauri/: Cargo.toml  tauri.conf.json
template/desktop/astro/src-tauri/capabilities/: default.json
template/desktop/astro/src-tauri/src/: main.rs
(+825 files in other folders)
