[package]
name = "mcp-project-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
serde_yaml = "0.9"

[lib]
name = "mcp_project_manager"
path = "src/lib.rs"

[[bin]]
name = "mcp-project-manager"
path = "src/main.rs"
